@@ -1,3 +1,13 @@
+2010-06-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/Makefile.am (coders_mat_la_LIBADD): MAT coder is
+	optionally dependent on zlib so zlib should be listed as a
+	dependency.
+
+	* magick/blob.c (BlobToFile): MAGICK_IO_FSYNC=TRUE in the
+	environment should cause file data to be explicitly synchronized
+	prior to close.
+
 2010-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* VisualMagick/installer/inc/files-documentation.isx: There are
